--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -17,6 +17,8 @@
    font-family: 'Russo One', sans-serif;
 
    &__logo{
+      display: inline-flex;
+      align-items: center;
       color: var(--title-color);
       font-weight: var(--font-semi-bold);
       transition: color .4s;
@@ -30,7 +32,11 @@
    &__login,
    &__toggle,
    &__close{
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
       font-size: 1.25rem;
+      line-height: 1;
       color: var(--title-color);
       cursor: pointer;
       transition: color .4s;
@@ -58,6 +64,9 @@
       text-align: center;
    }
    &__link{
+      display: inline-flex;
+      align-items: center;
+      line-height: 1;
       color: var(--title-color);
       font-weight: var(--font-semi-bold);
       transition: color .4s;
